force-app/main/default/objects/Application_Tables__c/Application_Tables__c.object-meta.xml
<CustomObject>
    <label>Application Tables</label>
    <nameField>
        <displayFormat>ATD-{0000}</displayFormat>
        <label>Application Tables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>