force-app/main/default/objects/Application_Tables__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Schedule_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Zoning</fullName>
            </value>
            <value>
                <fullName>Site Analysis</fullName>
            </value>
            <value>
                <fullName>Application Submission</fullName>
            </value>
            <value>
                <fullName>Conditional Commitment</fullName>
            </value>
            <value>
                <fullName>Firm Commitment</fullName>
            </value>
            <value>
                <fullName>Perliminary Drawings</fullName>
                <label>Preliminary Drawings</label>
            </value>
            <value>
                <fullName>Woking Drawings</fullName>
                <label>Working Drawings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>