force-app/main/default/objects/Application_Tables__c/fields/Activity_Impact__c.field-meta.xml
<CustomField>
    <fullName>Activity_Impact__c</fullName>
    <inlineHelpText>Please describe the proposed impact of the activity.</inlineHelpText>
    <label>Activity Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>