force-app/main/default/objects/Application_Tables__c/fields/AMI__c.field-meta.xml
<CustomField>
    <fullName>AMI__c</fullName>
    <label>% AMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>