force-app/main/default/objects/Application_Tables__c/fields/Amount_of_CDA_Subsidy_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_CDA_Subsidy_Requested__c</fullName>
    <label>Amount of CDA Subsidy Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>