force-app/main/default/objects/Application_Tables__c/fields/Amount_of_City_Funding__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_City_Funding__c</fullName>
    <label>Amount of City Funding Request</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>