force-app/main/default/objects/Application_Tables__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Tables</relationshipLabel>
    <relationshipName>Application_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>