force-app/main/default/objects/Application_Tables__c/fields/BA__c.field-meta.xml
<CustomField>
    <fullName>BA__c</fullName>
    <description>Bathrooms</description>
    <label>BA</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>