force-app/main/default/objects/Application_Tables__c/fields/BR__c.field-meta.xml
<CustomField>
    <fullName>BR__c</fullName>
    <description>Bedrooms</description>
    <label>BR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>