force-app/main/default/objects/Application_Tables__c/fields/CDA_Buyer_Assistance__c.field-meta.xml
<CustomField>
    <fullName>CDA_Buyer_Assistance__c</fullName>
    <label>CDA Buyer Assistance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>