force-app/main/default/objects/Application_Tables__c/fields/CDA_subsidized__c.field-meta.xml
<CustomField>
    <fullName>CDA_subsidized__c</fullName>
    <label>CDA subsidized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>