force-app/main/default/objects/Application_Tables__c/fields/City_Department_to_Administer__c.field-meta.xml
<CustomField>
    <fullName>City_Department_to_Administer__c</fullName>
    <inlineHelpText>Up to 65 characters</inlineHelpText>
    <label>City Department to Administer</label>
    <length>65</length>
    <type>Text</type>
</CustomField>