force-app/main/default/objects/Application_Tables__c/fields/Construct_Type__c.field-meta.xml
<CustomField>
    <fullName>Construct_Type__c</fullName>
    <label>Construct Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Rehab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>