force-app/main/default/objects/Application_Tables__c/fields/Cost_of_Repair_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Repair_per_Unit__c</fullName>
    <label>Cost of Repair per Unit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>