force-app/main/default/objects/Application_Tables__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <inlineHelpText>upto 255 characters</inlineHelpText>
    <label>Criteria</label>
    <type>TextArea</type>
</CustomField>