force-app/main/default/objects/Application_Tables__c/fields/Describe_Proposed_Activity__c.field-meta.xml
<CustomField>
    <fullName>Describe_Proposed_Activity__c</fullName>
    <inlineHelpText>Please describe the proposed project, development, service, or other activity to be completed.</inlineHelpText>
    <label>Describe Proposed Activity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>