force-app/main/default/objects/Application_Tables__c/fields/Descripition__c.field-meta.xml
<CustomField>
    <fullName>Descripition__c</fullName>
    <label>Descripition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>