force-app/main/default/objects/Application_Tables__c/fields/Duties__c.field-meta.xml
<CustomField>
    <fullName>Duties__c</fullName>
    <inlineHelpText>Duties of Staff person.  Upto 255 characters.</inlineHelpText>
    <label>Duties</label>
    <type>TextArea</type>
</CustomField>