force-app/main/default/objects/Application_Tables__c/fields/Ending_Budget__c.field-meta.xml
<CustomField>
    <fullName>Ending_Budget__c</fullName>
    <label>Ending Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>