force-app/main/default/objects/Application_Tables__c/fields/Expected_Budget__c.field-meta.xml
<CustomField>
    <fullName>Expected_Budget__c</fullName>
    <inlineHelpText>Please describe the expected budget for the activity.</inlineHelpText>
    <label>Expected Budget</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>