force-app/main/default/objects/Application_Tables__c/fields/Expected_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeline__c</fullName>
    <inlineHelpText>Please describe the expected timeline for the activity.</inlineHelpText>
    <label>Expected Timeline</label>
    <type>TextArea</type>
</CustomField>