force-app/main/default/objects/Application_Tables__c/fields/Fed_ID_Soc_Sec__c.field-meta.xml
<CustomField>
    <fullName>Fed_ID_Soc_Sec__c</fullName>
    <label>Fed. ID/Soc. Sec. #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>