force-app/main/default/objects/Application_Tables__c/fields/Fiscal_Management_Functions__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Management_Functions__c</fullName>
    <inlineHelpText>Upto 255 characters.</inlineHelpText>
    <label>Fiscal Management Functions</label>
    <type>TextArea</type>
</CustomField>