force-app/main/default/objects/Application_Tables__c/fields/For_Sale_or_Rental__c.field-meta.xml
<CustomField>
    <fullName>For_Sale_or_Rental__c</fullName>
    <label>For-Sale or Rental</label>
    <length>25</length>
    <type>Text</type>
</CustomField>