force-app/main/default/objects/Application_Tables__c/fields/Full_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Full_Part_Time__c</fullName>
    <label>Full/Part Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>