force-app/main/default/objects/Application_Tables__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <inlineHelpText>Up to 100 characters</inlineHelpText>
    <label>Funding Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>