force-app/main/default/objects/Application_Tables__c/fields/Funding_Source_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source_Grant_Type__c</fullName>
    <inlineHelpText>Up to 255 characters</inlineHelpText>
    <label>Funding Source Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>