force-app/main/default/objects/Application_Tables__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>