force-app/main/default/objects/Application_Tables__c/fields/HOME_ARP_Rental_Housing_Development__c.field-meta.xml
<CustomField>
    <fullName>HOME_ARP_Rental_Housing_Development__c</fullName>
    <label>HOME-ARP Rental Housing Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>