force-app/main/default/objects/Application_Tables__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family Detached</fullName>
            </value>
            <value>
                <fullName>Two-Family</fullName>
            </value>
            <value>
                <fullName>Townhomes/Rowhouse</fullName>
            </value>
            <value>
                <fullName>Three-Family</fullName>
            </value>
            <value>
                <fullName>Four-Family</fullName>
            </value>
            <value>
                <fullName>Multistory with Elevator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>