force-app/main/default/objects/Application_Tables__c/fields/How_it_relates_to_the_Neighborhood_Plan__c.field-meta.xml
<CustomField>
    <fullName>How_it_relates_to_the_Neighborhood_Plan__c</fullName>
    <inlineHelpText>Please describe how the activity relates to the neighborhood plan.</inlineHelpText>
    <label>How it relates to the Neighborhood Plan</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>