force-app/main/default/objects/Application_Tables__c/fields/key_partners__c.field-meta.xml
<CustomField>
    <fullName>key_partners__c</fullName>
    <inlineHelpText>Please describe the key partners for this activity, if applicable.</inlineHelpText>
    <label>Key Partners</label>
    <type>TextArea</type>
</CustomField>