force-app/main/default/objects/Application_Tables__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Please describe the proposed location for the activity.</inlineHelpText>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>