force-app/main/default/objects/Application_Tables__c/fields/M_WBE_Certified__c.field-meta.xml
<CustomField>
    <fullName>M_WBE_Certified__c</fullName>
    <label>M/WBE Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBE</fullName>
            </value>
            <value>
                <fullName>WBE</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>