force-app/main/default/objects/Application_Tables__c/fields/Name_of_Grant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Grant__c</fullName>
    <inlineHelpText>Up to 255 characters</inlineHelpText>
    <label>Name of Grant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>