force-app/main/default/objects/Application_Tables__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <type>TextArea</type>
</CustomField>