force-app/main/default/objects/Application_Tables__c/fields/Number_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Bathrooms__c</fullName>
    <label>Number Bathrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>