force-app/main/default/objects/Application_Tables__c/fields/Number_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Bedrooms__c</fullName>
    <label>Number Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>