force-app/main/default/objects/Application_Tables__c/fields/Number_of_Restricted_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Restricted_Units__c</fullName>
    <label>Number of Restricted Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>