force-app/main/default/objects/Application_Tables__c/fields/number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>number_of_Units__c</fullName>
    <label># of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>