force-app/main/default/objects/Application_Tables__c/fields/Objectives_and_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Objectives_and_Outcomes__c</fullName>
    <inlineHelpText>Enter as many Objectives and outcomes as neccessary.  Upto 255 characters</inlineHelpText>
    <label>Objectives and Outcomes</label>
    <type>TextArea</type>
</CustomField>