force-app/main/default/objects/Application_Tables__c/fields/of_QP_units__c.field-meta.xml
<CustomField>
    <fullName>of_QP_units__c</fullName>
    <label># of QP units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>