force-app/main/default/objects/Application_Tables__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Neighborhood Association</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>