force-app/main/default/objects/Application_Tables__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <inlineHelpText>upto 255 characters</inlineHelpText>
    <label>Output</label>
    <type>TextArea</type>
</CustomField>