force-app/main/default/objects/Application_Tables__c/fields/Output_Description_s__c.field-meta.xml
<CustomField>
    <fullName>Output_Description_s__c</fullName>
    <inlineHelpText>Upto 255 characters</inlineHelpText>
    <label>Output Description(s)</label>
    <type>TextArea</type>
</CustomField>