force-app/main/default/objects/Application_Tables__c/fields/over_under_budget__c.field-meta.xml
<CustomField>
    <fullName>over_under_budget__c</fullName>
    <label>% over/under budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>