force-app/main/default/objects/Application_Tables__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>