force-app/main/default/objects/Application_Tables__c/fields/Position_filled_by_submission_date__c.field-meta.xml
<CustomField>
    <fullName>Position_filled_by_submission_date__c</fullName>
    <label>Position filled by submission date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>