force-app/main/default/objects/Application_Tables__c/fields/Project_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Project_Neighborhood__c</fullName>
    <label>Project Neighborhood</label>
    <length>25</length>
    <type>Text</type>
</CustomField>