force-app/main/default/objects/Application_Tables__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Sale</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>