force-app/main/default/objects/Application_Tables__c/fields/Project_Ward__c.field-meta.xml
<CustomField>
    <fullName>Project_Ward__c</fullName>
    <label>Project Ward #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>