force-app/main/default/objects/Application_Tables__c/fields/Projected_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sale_Price__c</fullName>
    <label>Projected Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>