force-app/main/default/objects/Application_Tables__c/fields/Proposed_Activity__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Activity__c</fullName>
    <inlineHelpText>Max 100 characters</inlineHelpText>
    <label>Proposed Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>