force-app/main/default/objects/Application_Tables__c/fields/Proposed_of_Time_Charged_to_CDBG__c.field-meta.xml
<CustomField>
    <fullName>Proposed_of_Time_Charged_to_CDBG__c</fullName>
    <label>Proposed % of Time Charged to CDBG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>