force-app/main/default/objects/Application_Tables__c/fields/Proposed_of_Time_Charged_to_CDBG_Activ__c.field-meta.xml
<CustomField>
    <fullName>Proposed_of_Time_Charged_to_CDBG_Activ__c</fullName>
    <label>Proposed % of Time Charged to CDBG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>