force-app/main/default/objects/Application_Tables__c/fields/Residency_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Residency_Requirements__c</fullName>
    <inlineHelpText>e.g., Seniors, Disabled, etc..</inlineHelpText>
    <label>Residency Requirements</label>
    <type>TextArea</type>
</CustomField>