force-app/main/default/objects/Application_Tables__c/fields/Restricted_Units__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Units__c</fullName>
    <label># Restricted Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>