force-app/main/default/objects/Application_Tables__c/fields/Schedule_Category__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Category__c</fullName>
    <label>Schedule Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Construction Finance</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Construction Loan Closing</fullName>
            </value>
            <value>
                <fullName>Construction Start</fullName>
            </value>
            <value>
                <fullName>Marketing Start-Up</fullName>
            </value>
            <value>
                <fullName>Construction Complete</fullName>
            </value>
            <value>
                <fullName>All Units Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>