force-app/main/default/objects/Application_Tables__c/fields/Select_When_Activity_Will_Occur__c.field-meta.xml
<CustomField>
    <fullName>Select_When_Activity_Will_Occur__c</fullName>
    <label>Select When Activity Will Occur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>