force-app/main/default/objects/Application_Tables__c/fields/Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Sq_Ft__c</fullName>
    <label>Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>