force-app/main/default/objects/Application_Tables__c/fields/Starting_Budget__c.field-meta.xml
<CustomField>
    <fullName>Starting_Budget__c</fullName>
    <label>Starting Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>