force-app/main/default/objects/Application_Tables__c/fields/Target_Residents__c.field-meta.xml
<CustomField>
    <fullName>Target_Residents__c</fullName>
    <label>Target Residents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low/Mod Income</fullName>
            </value>
            <value>
                <fullName>Market Rate</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>