force-app/main/default/objects/Application_Tables__c/fields/Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Type__c</fullName>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Sale</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>