force-app/main/default/objects/Application_Tables__c/fields/Title_Position__c.field-meta.xml
<CustomField>
    <fullName>Title_Position__c</fullName>
    <inlineHelpText>Title or position of this staff person.  Upto 65 characters.</inlineHelpText>
    <label>Title/Position</label>
    <length>65</length>
    <type>Text</type>
</CustomField>