force-app/main/default/objects/Application_Tables__c/fields/Total_Amount_Award_in_last_2_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Award_in_last_2_Yrs__c</fullName>
    <inlineHelpText>Enter a numeric currency.</inlineHelpText>
    <label>Total Amount Award in last 2 Yrs.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>