force-app/main/default/objects/Application_Tables__c/fields/Total_Amount_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Awarded__c</fullName>
    <label>Total Amount Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>