force-app/main/default/objects/Application_Tables__c/fields/Total_Development_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Development_Costs__c</fullName>
    <label>Total Development Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>