force-app/main/default/objects/Application_Tables__c/fields/Total_Number_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Units__c</fullName>
    <label>Total Number Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>