force-app/main/default/objects/Application_Tables__c/fields/Track_Record_Of__c.field-meta.xml
<CustomField>
    <fullName>Track_Record_Of__c</fullName>
    <label>Track Record Of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime Contractor</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>