force-app/main/default/objects/Application_Tables__c/fields/Unit_Address__c.field-meta.xml
<CustomField>
    <fullName>Unit_Address__c</fullName>
    <label>Unit Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>