force-app/main/default/objects/Application_Tables__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>